internal/gitops/templates/cluster-apps-base/services/olm/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: operatorhubio-catalog-unpack-bundles-allow-443
  namespace: olm
spec:
  podSelector:
  matchExpressions:
  - key: operatorframework.io/bundle-unpack-ref
    operator: Exists
  - key: olm.managed
    operator: In
    values: ["true"]
  policyTypes: [Egress]
  egress:
  - ports:
    - protocol: TCP
  port: 443
